--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### VS Code ###
+.vscode/
+
+### Others ###
+/**/.mvn/
+/**/target/
+
+
 # Compiled class file
 *.class
 
