--- a/xiuming-security-auth-server/src/main/resources/application.properties
+++ b/xiuming-security-auth-server/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.redis.host=localserver
+spring.redis.port=6379
+
+ming.security.token-type=redis
