自定义OAuth2的授权流程

--- a/xiuming-security-resource-server/src/main/resources/application.properties
+++ b/xiuming-security-resource-server/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8081
 spring.redis.host=localserver
 spring.redis.port=6379
 
-ming.security.token-type=redis
+#ming.security.token-type=redis
