自定义登录和授权页面

--- a/xiuming-security-auth-server/pom.xml
+++ b/xiuming-security-auth-server/pom.xml
@@ -13,16 +13,12 @@
     <artifactId>xiuming-security-auth-server</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-redis</artifactId>
-        </dependency>
 
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.9.3</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
     </dependencies>
 
 
