--- a/xiuming-security-auth-server/src/main/resources/application.properties
+++ b/xiuming-security-auth-server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8001
 ## 不加server.servlet.context-path会一直处在认证页面
-server.servlet.context-path=/uaa
+server.servlet.context-path=/authServer
 
-# Session store type.
-spring.session.store-type=redis
-spring.redis.host=localserver
-spring.redis.port=6379
+
+spring.thymeleaf.prefix=classpath:/views/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
